添加了redis与filter
