# swagger/swagger.json
@@ -44,6 +44,43 @@
                 }
             }
         },
+        "/user/getUserList": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "description": "获取用户列表",
+                "operationId": "UserController.获取用户列表",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "data",
+                        "description": "请求参数",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.c_user.Usercondition"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SysUser"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "接口未找到"
+                    },
+                    "504": {
+                        "description": "接口超时"
+                    }
+                }
+            }
+        },
         "/user/login": {
             "post": {
                 "tags": [
@@ -122,6 +159,20 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
+        "controllers.c_user.Usercondition": {
+            "title": "Usercondition",
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "offset": {
                     "type": "integer",
                     "format": "int64"
                 }
